--- a/css/styles.css
+++ b/css/styles.css
@@ -12,6 +12,7 @@ h4,h3{
     text-align: center;
     color:rgb(23, 98, 238);
     padding-left: 15px;
+    margin-bottom: 20px;
 }
 
 /*---------------------------------------------------------------*/
@@ -102,3 +103,8 @@ button.btn-danger:hover {
     font-size: 16px;
 }
 
+section {
+    margin-top: 30px;
+    margin-left: 250px;
+    margin-right: 250px;
+}
