--- a/css/styles.css
+++ b/css/styles.css
@@ -62,7 +62,7 @@ button.btn-primary {
     background-color: #007bff;
     color: white;
     border: none;
-}
+    }
 
 /*Hover: Efecto cuando el usuario pasa sobre el boton*/
 button.btn-primary:hover {
@@ -70,13 +70,24 @@ button.btn-primary:hover {
 }
 
 button.btn-danger {
-    background-color: #35dc9c;
+    background-color: #4e35dc;
+    color: white;
+    border: none;
+    
+}
+
+button.btn-danger:hover {
+    background-color: #7b53e9; 
+}
+
+button.btn-danger1 {
+    background-color: #35dc59;
     color: white;
     border: none;
 }
 
-button.btn-danger:hover {
-    background-color: #16dd7a; 
+button.btn-danger1:hover {
+    background-color: #5af380; 
 }
 /*---------------------------------------------------------------*/
 
